# Prison

./: README.md
Execute_Prisoners_C++/: Execute_Prisoners.cpp
Execute_Prisoners_Qt-Creator/: CMakeLists.txt  globalvars.cpp  globalvars.h  main.cpp  order.cpp  order.h  order.ui  prison.cpp  prison.h  prison.ui  result.cpp  result.h  result.ui
